--- a/react-app/src/components/AllMedia/AllMedia.css
+++ b/react-app/src/components/AllMedia/AllMedia.css
@@ -45,8 +45,9 @@
 .media-map {
   display: grid;
   grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(auto-fill, 245px);
   grid-auto-flow: dense;
-  grid-auto-rows: 1fr;
+  /* grid-auto-rows: 1fr; */
   width: 1230px;
   grid-gap: 10px;
   flex-basis: 200px;
